# PuyotanAI

./: .gitignore  LICENSE  README.md  ROADMAP.md  puyotan_env.py  verify_chain_score.py
.github/workflows/: perf_bench.yml
gui/: __init__.py  agents.py  beam_config.json  config.py  controller.py  input_handler.py  main.py  model.py  view.py  view_model.py
gui/assets/: theme.qss
gui/views/: __init__.py  board_widget.py  main_window.py  player_panel.py  player_settings_widget.py  setup_widget.py  status_bar_widget.py
native/: .gitignore  CMakeLists.txt  build.bat  test_resnet.py
native/engine/: game_state.hpp
native/include/ai/: search.hpp
native/include/config/: engine_config.hpp
native/include/engine/: board.hpp  chain.hpp  game_state.hpp  gravity.hpp  simulator.hpp  tsumo.hpp
native/include/puyotan/: pch.hpp
native/include/puyotan/common/: config.hpp  types.hpp
native/include/puyotan/core/: board.hpp  chain.hpp  gravity.hpp
native/include/puyotan/engine/: match.hpp  scorer.hpp  tsumo.hpp
native/include/puyotan/env/: observation.hpp  reward.hpp  rl_utils.hpp  vector_match.hpp
native/include/puyotan/game/: onnx_policy.hpp  puyotan_match.hpp  puyotan_vector_match.hpp  scorer.hpp  simulator.hpp  tsumo.hpp
native/include/puyotan/policy/: onnx_policy.hpp
native/include/puyotan/rl/: cnn_policy.hpp  constants.hpp  mlp_policy.hpp  policy.hpp  ppo_trainer.hpp  resnet_policy.hpp  rollout_buffer.hpp
native/include/puyotan/search/: beam_config_loader.hpp  beam_evaluator.hpp  beam_search.hpp
native/resources/: beam_config.json  reward_default.json  reward_match.json  reward_solo.json  reward_specification.md
native/src/: bindings.cpp
native/src/ai/: search.cpp
native/src/benchmarks/: beam_search_benchmark.cpp  engine_benchmark.cpp
native/src/bindings/: bindings.cpp
native/src/core/: board.cpp  chain.cpp  gravity.cpp
native/src/engine/: board.cpp  chain.cpp  gravity.cpp  match.cpp  simulator.cpp  tsumo.cpp
native/src/env/: observation.cpp  reward.cpp  rl_utils.cpp  vector_match.cpp
native/src/game/: expand_table_data.inc  onnx_policy.cpp  puyotan_match.cpp  puyotan_vector_match.cpp  simulator.cpp  tsumo.cpp
native/src/policy/: onnx_policy.cpp
native/src/rl/: cnn_policy.cpp  mlp_policy.cpp  ppo_trainer.cpp  resnet_policy.cpp  rollout_buffer.cpp
native/src/search/: beam_search.cpp
orchestrator/: config.py  engine.py  export_onnx.py  selfplay.py  solo_training.py  train.py
tests/: benchmark.py  benchmark_match.py  benchmark_vector_match.py  check_match.py  debug_chains.py  debug_determinism.py  debug_hang.cpp  debug_steps.py  simulate_random_chains.py  test_match.py  test_minimal.py  test_onnx_inference.py  test_puyotan_env.py  test_rl_api.py  test_rl_match.py  trace_board.py  trace_frames.py  verify_consecutive.py  verify_timing.py  verify_vector_determinism.py  visual_benchmark.py  watch_solo.py
tests/perf/: README.md  bench_beam.py  bench_engine.py  run_stat_bench.py
training/: __init__.py  config.py  env.py  export.py  model.py  reward.py  trainer.py
vision/: __init__.py
